[tool.poetry]
name = "nonebot-plugin-csjewelry"
version = "0.3.1"
description = "一款模拟查找饰品价格的机器人"
authors = ["Sydrr0 <2562312527@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nonebot-plugin-csjewelry"}]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.1"
bs4 = "^0.0.1"
httpx = "^0.24.1"
lxml = "^4.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
